--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
-  margin: 2.5em;
+  margin: 2.5rem;
+}
+
+h1 {
+  margin: 0;
 }
 
 .my-pic,
@@ -26,57 +30,54 @@ body {
 }
 .intro__zeddrix-fabian,
 .contact-info {
-  margin-top: 0em;
+  margin-top: 0;
 }
 .intro__career {
-  margin-top: -1em;
+  margin: 0;
   color: lightgrey;
 }
 .intro {
   text-align: left;
-  margin-left: 1em;
+  margin-left: 1rem;
 }
 .contact-info__container {
-  margin: 1em;
+  margin: 1rem;
   border-bottom: 2px solid lightgrey;
-  padding-bottom: 2em;
+  padding-bottom: 2rem;
 }
 .contact-info {
-  padding: 0em;
-  margin-right: 2em;
-  margin-left: 0.5em;
+  padding: 0;
+  margin-right: 2rem;
+  margin-left: 0.5rem;
 }
 a {
   text-decoration: none;
   color: #22b9b9;
 }
 .icon {
-  margin-top: 0.1em;
+  margin-top: 0.1rem;
 }
 .email-icon {
-  margin-top: 0.3em;
+  margin-top: 0.3rem;
 }
 
 .summary-side {
   float: right;
-  margin: 2em;
+  margin: 2rem;
   color: grey;
   border-left: 2px solid #22b9b9;
-  padding-left: 1em;
+  padding-left: 1rem;
 }
 .summary-side__header {
   color: black;
 }
 
 .resume-body {
-  padding: 1em;
-  margin-top: -1em;
+  padding: 1rem;
 }
 
-.projects__header {
-  margin-left: 0.2em;
-}
 .project__name {
-  margin-bottom: -0.7em;
+  margin-top: 0;
+  margin-bottom: 1rem;
   color: #22b9b9;
 }
