--- a/style.css
+++ b/style.css
@@ -1,64 +1,83 @@
+* {
+  box-sizing: border-box;
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
   margin: 2.5rem;
+  background: whitesmoke;
 }
 
 h1 {
   margin: 0;
 }
 
-.my-pic,
-.intro,
-.icon,
-.contact-info,
-.email-icon {
-  float: left;
-}
-
-.header,
-.contact-info__container,
-.resume-body {
-  position: relative;
+ul {
+  list-style: circle;
 }
 
 .header {
-  display: inline-block;
-}
-.my-pic {
-  text-align: left;
-}
-.intro__zeddrix-fabian,
-.contact-info {
-  margin-top: 0;
-}
-.intro__career {
-  margin: 0;
-  color: lightgrey;
+  width: 100%;
+  display: flex;
 }
 .intro {
-  text-align: left;
   margin-left: 1rem;
 }
+.intro__career {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  color: lightgrey;
+}
+
 .contact-info__container {
   margin: 1rem;
+  padding-bottom: 1rem;
   border-bottom: 2px solid lightgrey;
-  padding-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.contact-info__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .contact-info {
-  padding: 0;
-  margin-right: 2rem;
-  margin-left: 0.5rem;
+  margin: 0;
 }
+.web-icon,
+.phone-icon {
+  height: 1.4rem;
+  width: 1.4rem;
+}
+.email-icon {
+  height: 1.1rem;
+  width: 1.5rem;
+}
+.address-icon {
+  height: 1.65rem;
+  width: 1.3rem;
+}
+.icon {
+  margin-right: 0.5rem;
+}
+
 a {
   text-decoration: none;
   color: #22b9b9;
-}
-.icon {
-  margin-top: 0.1rem;
-}
-.email-icon {
-  margin-top: 0.3rem;
 }
 
 .summary-side {
@@ -79,5 +98,5 @@ a {
 .project__name {
   margin-top: 0;
   margin-bottom: 1rem;
-  color: #22b9b9;
+  color: #117a7a;
 }
